2011-03-14  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=56320
        Remove HistoryItem::icon() and the WebCore dependency on "IconDatabaseBase::defaultIcon()"

        * ewk/ewk_history.cpp:
        (ewk_history_item_icon_surface_get): Use IconDatabase directly.

2011-03-14  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Kenneth Rohde Christiansen.

        [EFL] Move cache_directory api
        https://bugs.webkit.org/show_bug.cgi?id=52139

        Move cache directory related apis from ewk_view to ewk_settings because
        those are not related to ewk_view.

        * ewk/ewk_main.cpp:
        (_ewk_init_body):
        * ewk/ewk_settings.cpp:
        (ewk_settings_cache_directory_path_set):
        (ewk_settings_cache_directory_path_get):
        * ewk/ewk_settings.h:
        * ewk/ewk_view.cpp:
        (_ewk_view_priv_new):
        (_ewk_view_priv_del):
        * ewk/ewk_view.h:

2011-03-12  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed build fix.

        [EFL] Fix build break because of several reason.
        https://bugs.webkit.org/show_bug.cgi?id=56244

        * ewk/ewk_settings.cpp:
        (ewk_settings_icon_database_path_set):

2011-03-10  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Limit touch events when only page required touch events.
        https://bugs.webkit.org/show_bug.cgi?id=54857

        Block touch events when ChromeClient::needTouchEvents got false.

        * WebCoreSupport/ChromeClientEfl.cpp:
        (WebCore::ChromeClientEfl::needTouchEvents):
        * WebCoreSupport/ChromeClientEfl.h:
        * ewk/ewk_frame.cpp:
        (ewk_frame_feed_touch_event):
        * ewk/ewk_private.h:
        * ewk/ewk_view.cpp:
        (ewk_view_need_touch_events_set):
        (ewk_view_need_touch_events_get):

2011-03-08  Grzegorz Czajkowski  <g.czajkowski@samsung.com>

        Reviewed by Kent Tamura.
